--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       setInterval(() => {
         audio.play();
         setTimeout(() => audio.play(), 16250);
-        
+        minutes = 20;
+        seconds = 0;
       }, 1000 * 60 * 20);
     }
   </script>
